--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(chukanova2_0)
 
 add_subdirectory("k-d_tree")
 add_subdirectory("vector")
+add_subdirectory("list")
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp list/main.cpp)
 add_executable(chukanova2_0 ${SOURCE_FILES})
