--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(chukanova2_0)
 add_subdirectory("k-d_tree")
 add_subdirectory("vector")
 add_subdirectory("list")
+add_subdirectory("list_2")
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES main.cpp list/main.cpp)
