--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.6)
 project(chukanova2_0)
 
 add_subdirectory("k-d_tree")
+add_subdirectory("max_tree")
 add_subdirectory("vector")
 add_subdirectory("list")
 add_subdirectory("list_2")
