--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(chukanova2_0)
 
 add_subdirectory("k-d_tree")
 add_subdirectory("max_tree")
+add_subdirectory("elem_in_tree")
 add_subdirectory("vector")
 add_subdirectory("list")
 add_subdirectory("list_2")
