--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(chukanova2_0)
 add_subdirectory("k-d_tree")
 add_subdirectory("max_tree")
 add_subdirectory("sum_tree")
+add_subdirectory("RBTree")
+add_subdirectory("monte_carlo_kd")
 add_subdirectory("elem_in_tree")
 add_subdirectory("vector")
 add_subdirectory("list")
