--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ add_subdirectory("list")
 add_subdirectory("list_2")
 add_subdirectory("list_2_cpp")
 add_subdirectory("dir_copy")
+add_subdirectory("determinant")
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp list/main.cpp)
+set(SOURCE_FILES main.cpp)
 add_executable(chukanova2_0 ${SOURCE_FILES})
